--- a/src/style/custom-style.sass
+++ b/src/style/custom-style.sass
@@ -1,5 +1,5 @@
 @import ./variables.sass
-
+  
 .navbar .navbar-menu
   box-shadow: none !important
 
@@ -92,6 +92,8 @@ footer.footer
     height: 1em
     vertical-align: middle
     display: inline
+header
+margin-bottom: 80px;
 
 // blog roll
 .blog-list-item.is-featured
@@ -102,3 +104,4 @@ footer.footer
 .blog-list-item .featured-thumbnail
   flex-basis: 35%
   margin: 0 1.5em 0 0
+
